tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_crawk_flags_r_t_e_format_grouped_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - crawk
    - "-r"
    - "-t"
    - "-e"
    - "--format"
    - grouped
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crawk
 - crate::analyzer::Analyzer
 - crate::discover::ModuleInfo
 - crate::discover::ModuleVisibility
 - crate::discover::TargetInfo
 - crate::discover::TargetKind
 - crate::error::AnalysisError
 - crate::graph::AnnotatedEdges
 - crate::graph::Cycle
 - crate::graph::DependencyGraph
 - crate::graph::DependencyGraphOptions
 - crate::graph::Edge
 - crate::graph::ShortestPaths
 - crate::model::AnalysisOptions
 - crate::model::AnalysisResult
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathSuffix
 - crate::reference::TypeReference
 - crate::rules::CheckOptions
 - crate::rules::CheckReport
 - crate::rules::InitOutcome
 - crate::rules::Violation
 - crate::rules::ViolationKind
analyzer
 - crate::cache::ParseCache
 - crate::discover::CrateInfo
 - crate::discover::ModuleInfo
 - crate::discover::TargetInfo
 - crate::discover::TargetKind
 - crate::error::AnalysisError
 - crate::error::Result
 - crate::graph
 - crate::graph::DependencyGraph
 - crate::graph::DependencyGraphOptions
 - crate::graph::Edge
 - crate::graph::build_edges
 - crate::graph::resolve_reference_target
 - crate::graph::truncate_module_path
 - crate::model::AnalysisOptions
 - crate::model::AnalysisResult
 - crate::module_path::is_in_subtree
 - crate::module_path::split_parent
 - crate::parser::CrateAnalyzer
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathSuffix
 - crate::reference::TypeReference
 - crate::resolve::resolve_glob
 - crate::rules
 - crate::rules::CheckOptions
 - crate::rules::CheckReport
 - crate::rules::InitOutcome
 - crate::rules::RuleSet
 - crate::rules::evaluate
 - crate::rules::resolve_config_path
 - crate::rules::scaffold_config
analyzer::tests
 - crate::analyzer::Analyzer
 - crate::analyzer::expand_groups
 - crate::discover::ModuleVisibility::Public
 - crate::reference::PathSuffix
cache
cache::tests
 - crate::cache::ParseCache
constants
discover
 - crate::cache::ParseCache
discover::module_tree
 - crate::cache::ParseCache
 - crate::constants::LIB_FILE_NAME
 - crate::constants::MAIN_FILE_NAME
 - crate::constants::MODULE_FILE_NAME
 - crate::discover::CrateInfo
 - crate::discover::CrateInfoError
 - crate::discover::ModuleInfo
 - crate::discover::ModuleVisibility
 - crate::discover::Result
 - crate::discover::TargetInfo
 - crate::module_path::split_parent
 - crate::utils::ReadFileError
 - crate::utils::has_cfg_test
 - crate::utils::read_source_file
discover::module_tree::tests
discover::tests
 - crate::discover::CrateInfo
 - crate::discover::CrateInfoError
 - crate::discover::ModuleInfo
 - crate::discover::ModuleVisibility
 - crate::discover::Result
 - crate::discover::TargetInfo
 - crate::discover::TargetKind
error
 - crate::discover::CrateInfoError
graph
 - crate::error::AnalysisError::ModuleNotFound
 - crate::error::Result
 - crate::graph::cycles::Cycle
 - crate::graph::cycles::detect_cycles
 - crate::graph::edges
 - crate::graph::edges::AnnotatedEdges
 - crate::graph::edges::Edge
 - crate::graph::edges::build_edges
 - crate::graph::edges::resolve_reference_target
 - crate::graph::edges::truncate_module_path
 - crate::graph::orphans::find_orphans
 - crate::graph::paths::ShortestPaths
 - crate::graph::paths::compute_shortest_paths
graph::cycles
 - crate::graph::edges::AnnotatedEdges
graph::cycles::tests
 - crate::graph::cycles::Cycle
 - crate::graph::cycles::detect_cycles
graph::edges
 - crate::model::AnalysisResult
 - crate::reference::PathPrefix
 - crate::reference::TypeReference
graph::edges::tests
 - crate::graph::edges::AnnotatedEdges
 - crate::graph::edges::Edge
 - crate::graph::edges::build_edges
 - crate::graph::edges::find_module_target
 - crate::graph::edges::resolve_reference_target
 - crate::graph::edges::truncate_module_path
graph::orphans
 - crate::graph::edges::AnnotatedEdges
graph::orphans::tests
 - crate::graph::orphans::find_orphans
graph::paths
 - crate::graph::edges::AnnotatedEdges
 - crate::graph::edges::truncate_module_path
graph::paths::tests
 - crate::graph::paths::ShortestPaths
 - crate::graph::paths::compute_shortest_paths
graph::tests
 - crate::graph::AnnotatedEdges
 - crate::graph::Cycle
 - crate::graph::DependencyGraph
 - crate::graph::DependencyGraphOptions
 - crate::graph::Edge
 - crate::graph::ShortestPaths
 - crate::graph::build_edges
 - crate::graph::compute_shortest_paths
 - crate::graph::detect_cycles
 - crate::graph::find_orphans
 - crate::graph::resolve_reference_target
 - crate::graph::truncate_module_path
model
 - crate::reference::TypeReference
model::tests
 - crate::model::AnalysisOptions
 - crate::model::AnalysisResult
 - crate::reference::TypeReference
module_path
module_path::tests
 - crate::module_path::is_in_subtree
 - crate::module_path::parent_module
 - crate::module_path::split_parent
parser
 - crate::cache::ParseCache
 - crate::parser::visitor
 - crate::parser::visitor::ModuleVisitor
 - crate::reference::PathPrefix
 - crate::reference::TypeReference
 - crate::utils::ReadFileError
 - crate::utils::descend_inline_module
 - crate::utils::read_source_file
parser::tests
 - crate::analyzer::expand_groups
 - crate::parser::AnalyzerError
 - crate::parser::CrateAnalyzer
 - crate::parser::Result
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathPrefix::Crate
 - crate::reference::PathPrefix::Super
 - crate::reference::PathSuffix::Group
 - crate::utils::MAX_FILE_BYTES
 - crate::utils::ReadFileError
 - crate::utils::ReadFileError::TooLarge
parser::visitor
 - crate::constants::PATH_QUALIFIER_CRATE
 - crate::constants::PATH_QUALIFIER_SELF
 - crate::constants::PATH_QUALIFIER_SUPER
 - crate::reference::GroupItem
 - crate::reference::GroupItem::Aliased
 - crate::reference::GroupItem::Glob
 - crate::reference::GroupItem::Simple
 - crate::reference::PathPrefix
 - crate::reference::PathPrefix::None
 - crate::reference::PathPrefix::Super
 - crate::reference::TypeReference
 - crate::utils::has_cfg_test
parser::visitor::tests
 - crate::parser::visitor::CollectedReferences
 - crate::parser::visitor::ModuleVisitor
 - crate::parser::visitor::resolve_reference
reference
 - crate::constants::PATH_QUALIFIER_SELF
reference::tests
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathSuffix
 - crate::reference::Segments
 - crate::reference::TypeReference
resolve
 - crate::cache::ParseCache
 - crate::discover::CrateInfo
 - crate::module_path::is_in_subtree
 - crate::module_path::parent_module
 - crate::reference::PathPrefix
 - crate::reference::TypeReference
 - crate::utils::descend_inline_module
 - crate::utils::read_source_file
resolve::tests
 - crate::resolve::extract_public_items
 - crate::resolve::resolve_glob
rules
 - crate::graph::DependencyGraphOptions
 - crate::module_path::is_in_subtree
 - crate::rules::eval::evaluate
 - crate::rules::load::resolve_config_path
 - crate::rules::load::scaffold_config
rules::eval
 - crate::graph::Cycle
 - crate::graph::DependencyGraph
 - crate::module_path::is_in_subtree
 - crate::rules::AllowedCycle
 - crate::rules::CheckReport
 - crate::rules::LayerPos
 - crate::rules::RuleSet
 - crate::rules::Violation
 - crate::rules::ViolationKind
 - crate::rules::is_parent_child_cycle
rules::eval::tests
 - crate::graph::AnnotatedEdges
 - crate::graph::Cycle
 - crate::rules::AllowedCycle
 - crate::rules::DenyRule
 - crate::rules::LayerRule
 - crate::rules::ModulePattern
 - crate::rules::RestrictRule
 - crate::rules::RuleSet
 - crate::rules::ViolationKind
 - crate::rules::ViolationKind::Cycle
 - crate::rules::ViolationKind::Deny
 - crate::rules::ViolationKind::Layer
 - crate::rules::ViolationKind::Restrict
rules::load
 - crate::error::AnalysisError
 - crate::error::Result
 - crate::graph::Cycle
 - crate::rules::AllowedCycle
 - crate::rules::DenyRule
 - crate::rules::InitOutcome
 - crate::rules::LayerRule
 - crate::rules::ModulePattern
 - crate::rules::RestrictRule
 - crate::rules::RuleSet
 - crate::rules::is_parent_child_cycle
rules::load::tests
 - crate::graph::AnnotatedEdges
 - crate::rules::load::resolve_config_path
 - crate::rules::load::scaffold
 - crate::rules::load::scaffold_config
rules::tests
 - crate::rules::AllowedCycle
 - crate::rules::CheckOptions
 - crate::rules::CheckReport
 - crate::rules::DenyRule
 - crate::rules::InitOutcome
 - crate::rules::LayerPos
 - crate::rules::LayerRule
 - crate::rules::ModulePattern
 - crate::rules::RestrictRule
 - crate::rules::RuleSet
 - crate::rules::Violation
 - crate::rules::ViolationKind
 - crate::rules::evaluate
 - crate::rules::resolve_config_path
 - crate::rules::scaffold_config
utils
 - crate::constants::ATTR_CFG
 - crate::constants::MODULE_NAME_TEST
utils::tests
 - crate::utils::MAX_FILE_BYTES
 - crate::utils::ReadFileError
 - crate::utils::descend_inline_module
 - crate::utils::has_cfg_test
 - crate::utils::read_source_file
version

----- stderr -----
