tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_crawk_flags_r_t_e_g_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - crawk
    - "-r"
    - "-t"
    - "-e"
    - "-g"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crawk
 - crate::discover::CrateInfo
 - crate::discover::CrateInfoError
 - crate::discover::ModuleInfo
 - crate::parser::AnalyzerError
 - crate::parser::CrateAnalyzer
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathSuffix
 - crate::reference::Segments
 - crate::reference::TypeReference
 - crate::resolve::extract_public_items
constants
discover
 - crate::constants::ATTR_CFG
 - crate::constants::LIB_FILE_NAME
 - crate::constants::MAIN_FILE_NAME
 - crate::constants::MODULE_FILE_NAME
 - crate::constants::MODULE_NAME_TEST
parser
 - crate::constants::ATTR_CFG
 - crate::constants::MODULE_NAME_TEST
 - crate::constants::PATH_QUALIFIER_CRATE
 - crate::constants::PATH_QUALIFIER_SELF
 - crate::constants::PATH_QUALIFIER_SUPER
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathSuffix
 - crate::reference::TypeReference
parser::tests
 - crate::parser::AnalyzerError
 - crate::parser::CrateAnalyzer
 - crate::parser::FileReferences
 - crate::parser::Result
reference
 - crate::constants::PATH_QUALIFIER_SELF
reference::tests
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathSuffix
 - crate::reference::Segments
 - crate::reference::TypeReference
resolve
resolve::tests
 - crate::resolve::extract_public_items
tests
 - crate::::*
version
version::build_info

----- stderr -----
