tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_discover_flags_r_t.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - discover
    - "-r"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::cache::ParseCache
crate::constants::{LIB_FILE_NAME, MAIN_FILE_NAME, MODULE_FILE_NAME}
crate::discover::*
crate::discover::module_tree::*
crate::discover::{CrateInfo, CrateInfoError, ModuleInfo, ModuleVisibility, Result, TargetInfo}
crate::module_path::split_parent
crate::utils::{ReadFileError, has_cfg_test, read_source_file}

----- stderr -----
