tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_discover_flags_r_t_e_format_grouped_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - discover
    - "-r"
    - "-t"
    - "-e"
    - "--format"
    - grouped
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
discover
 - crate::cache::ParseCache
discover::module_tree
 - crate::cache::ParseCache
 - crate::constants::LIB_FILE_NAME
 - crate::constants::MAIN_FILE_NAME
 - crate::constants::MODULE_FILE_NAME
 - crate::discover::CrateInfo
 - crate::discover::CrateInfoError
 - crate::discover::ModuleInfo
 - crate::discover::ModuleVisibility
 - crate::discover::Result
 - crate::discover::TargetInfo
 - crate::module_path::split_parent
 - crate::utils::ReadFileError
 - crate::utils::has_cfg_test
 - crate::utils::read_source_file
discover::module_tree::tests
discover::tests
 - crate::discover::CrateInfo
 - crate::discover::CrateInfoError
 - crate::discover::ModuleInfo
 - crate::discover::ModuleVisibility
 - crate::discover::Result
 - crate::discover::TargetInfo
 - crate::discover::TargetKind

----- stderr -----
